--- a/heterogeneity - v5.tex
+++ b/heterogeneity - v5.tex
@@ -253,9 +253,9 @@ Multi-leaf tracking is an extension of the leaf alignment algorithm. Given a ser
 %
 Both the leaf alignment and leaf tracking directly benefit the study of leaf behavior in plant biology, such as leaf growth, leaf-level photosynthesis, leaf-level variations in plant mutant, etc.
 
-\subsection{DBScan to supplement leaf alignment}
+\subsection{Refining leaf alignment with density-based clustering}
 
-Given that practically any algorithm for leaf tracking and allignment will fail in some cases, we have selected an alignment method that will typically fail by "missing" leaves (parts of the plant will be excluded from allignment results) rather than giving false positives (parts of the plant are over-selected or the background is selected as a leaf). This sort of failure allows us to add another step after the inital allignment in which we use DBScan (?) to intelligently cluster the non-segmented plant pixels into separate leaves. DB Scan was chosen for being practical, having relatively few parameters, and not depending on the pixel intensities. Using a clustering algorithm that relies heavily on pixel intensities would defeat the purpose of identifying leaves for our application: further down the pipeline we want to consider leaves that have large amounts of variation in intensity. DB Scan is widely understood and used (references), and allows fine-tuning of the minimum thickness of the resulting clusters. Avoiding very thin clusters is also imperative to our application, given that a nearly-correct leaf segmentation may result in a thin band of non-segmented pixels around the edge of a leaf. Considering these pixels as a separate leaf would not be appropriate - setting a minimum-thickness guaruntees that any such pixels would not be clustered. Similarly, a leaf with very few pixels isstatistically insignificant and often misleading even if the leaf is genuine. By setting a minimum number of pixels per cluster we discard very small clusters even if they meet the minimum thickness requirement.
+Given that practically any algorithm for leaf tracking and allignment will fail in some cases, we have selected an alignment method that will typically fail by "missing" leaves (parts of the plant will be excluded from allignment results) rather than giving false positives (parts of the plant are over-selected or the background is selected as a leaf). This sort of failure allows us to add another step after the inital allignment in which we use DB Scan \citep{kriegel2011density} to intelligently cluster the non-segmented plant pixels into separate leaves. DB Scan was chosen for being practical, having relatively few parameters, and not depending on the pixel intensities. Using a clustering algorithm that relies heavily on pixel intensities would defeat the purpose of identifying leaves for our application: further down the pipeline we want to consider leaves that have large amounts of variation in intensity. DB Scan is widely understood and used for analysis of spatial information with physical constraints \citep{zaiane2002clustering}, and allows fine-tuning of the minimum thickness of the resulting clusters. Avoiding very thin clusters is also imperative to our application, given that a nearly-correct leaf segmentation may result in a thin band of non-segmented pixels around the edge of a leaf. Considering these pixels as a separate leaf would not be appropriate - setting a minimum-thickness guaruntees that any such pixels would not be clustered. Similarly, a leaf with very few pixels isstatistically insignificant and often misleading even if the leaf is genuine. By setting a minimum number of pixels per cluster we discard very small clusters even if they meet the minimum thickness requirement.
 
 \subsection{PlantPH on synthetic data}
 
