--- a/heterogeneity.bib
+++ b/heterogeneity.bib
@@ -2,6 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 %% Saved with string encoding Unicode (UTF-8)
 
+@article{kriegel2011density,
+  title={Density-based clustering},
+  author={Kriegel, Hans-Peter and Kr{\"o}ger, Peer and Sander, J{\"o}rg and Zimek, Arthur},
+  journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+  volume={1},
+  number={3},
+  pages={231--240},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{zaiane2002clustering,
+  title={Clustering spatial data when facing physical constraints},
+  author={Za{\"\i}ane, Osmar R and Lee, Chi-Hoon},
+  booktitle={Data Mining, 2002. ICDM 2003. Proceedings. 2002 IEEE International Conference on},
+  pages={737--740},
+  year={2002},
+  organization={IEEE}
+}
+
 @article{Allocco04,
 	Author = {Allocco DJ and Kohane IS and Butte AJ},
 	Journal = {BMC Bioinformatics},
@@ -636,7 +656,7 @@
 
 @ARTICLE{Boyes2001,
   author =       {Boyes, DC and Zayed, AM and Ascenzi, R and others},
-  title =        {Growth stage¨Cbased phenotypic analysis of Arabidopsis a model for high throughput functional genomics in plants},
+  title =        {Growth stageï¿½Cbased phenotypic analysis of Arabidopsis a model for high throughput functional genomics in plants},
   journal =      {Plant Cell},
   year =         {2001},
   volume =       {13},
